// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render text field wrapper 1`] = `
<div>
  <div
    class="MuiFormControl-root"
    data-testid="text-field"
  >
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiInput-input"
        id="operator"
        placeholder="Test Placeholder"
        type="text"
        value="test value"
      />
    </div>
    
  </div>
</div>
`;

exports[`render text field wrapper with readonly as true 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    test value
  </span>
</div>
`;

exports[`render text field wrapper with readonly as true showing - for empty value 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    -
  </span>
</div>
`;

exports[`render text field wrapper with readonly as true with a ReadOnlyComponent 1`] = `
<div>
  <div
    data-testid="custom-readonly-text"
    id="test-readonly-component-id"
  >
    used custom readonly component
  </div>
</div>
`;

exports[`render text field wrapper with readonly as true with showing empty value 1`] = `
<div>
  <span
    class="readonlyTextField"
    data-testid="readonly-text-field"
  >
    
  </span>
</div>
`;
